# effective-palm-tree

./: README.md  pyproject.toml
task1_fastapi/app/: dependencies.py  main.py  settings.py
task2_scraper/: config.py  github_scrapper.py  models.py  rate_limiter.py
task3_clickhouse/: config.py  saver.py
task4_sql/: query.sql
