[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "effective-palm-tree"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Dmitriy Shubenok", email = "dshubenok93@gmail.com" }]
dependencies = []

[project.optional-dependencies]
task1 = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.23.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
]
task2 = [
    "httpx>=0.27.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
]
task3 = [
    "aiochclient>=2.6.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
]
dev = [
    "ruff>=0.7.0",
]

[tool.uv]
dev-dependencies = ["ruff>=0.7.0"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["task1_fastapi", "task2_scraper", "task3_clickhouse"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E203"]
